[project]
name = "gpt-el"
version = "2.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.52.0",
    "openai>=1.82.0",
    "google-genai>=1.16.1",
    "jsonlines>=4.0.0",
]

[tool.pytest.ini_options]
markers = [
    "anthropic: marks tests as relating to Anthropic API (requires ANTHROPIC_API_KEY)",
    "openai: marks tests as relating to OpenAI API (requires OPENAI_API_KEY)",
    "google: marks tests as relating to Google API (requires GOOGLE_API_KEY)",
]
